Fix image overflow bug

--- a/projeto.css
+++ b/projeto.css
@@ -69,9 +69,10 @@ a {
 .slider {
     max-width: 80%;
     max-height: 80%;
+    height: 80%;
     position: relative;
     text-align: center;
-    overflow: hidden;
+    overflow: auto;
     margin: auto;
 }
 
@@ -81,7 +82,8 @@ a {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
 
-
+    height: 100%;
+    max-height: 100%;
 
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
@@ -107,6 +109,8 @@ a {
     flex-shrink: 0;
     width: 100%;
     height: 100%;
+    max-width: fit-content;
+    max-height: fit-content;
     transform-origin: center center;
     transform: scale(1);
     transition: transform 0.5s;
